--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,32 @@ footer cite {
 	font-size: 20px;
 }
 
+input[type="submit"] {
+	background-color: #fff;
+	color: #111;
+	font-weight:normal;
+	font-size:14px;
+	line-height:1.2em;
+	text-decoration:none;
+	border-radius:5px;
+	padding: 10px 30px 10px;
+	border:none;
+	outline:none;
+	box-shadow: 0px 1px 0px #111;
+}
+
+input[type="text"] {
+	font-size: 16px;
+	border: 2px solid #fff;
+	display: block;
+	padding: 10px 30px 10px;
+	width: 100%;
+	outline: none;
+	margin: 1em 0;
+	border-radius:5px;
+	box-shadow: 0px 1px 0px #111;
+}
+
 .one {
 	float:left; 
 	margin-right:20px;
