--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
 
 body {
 	background: #e10d1f;
-	font-family: 'Lato', sans-serif;
-	font-weight:700;
+	font-family: 'Roboto', sans-serif;
+	font-weight:400;
 	font-size: 20px;
 	line-height: 1.4em;
 	color: #fff;
@@ -17,11 +17,13 @@ body {
 
 h1 {
 	font-size: 2.5em;
+	font-weight: 700;
 	text-shadow: 0px 1px 0px #111;
 }
 
 h2 {
 	font-size: 1.2em;
+	font-weight: 700;
 	text-shadow: 0px 1px 0px #111;
 }
 
