--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ footer cite {
 }
 
 .nav {
-	font-size: 14px;
-	text-align: right;
+	font-size: 16px;
+	text-align: center;
 	line-height:1.2em;
 	padding: 20px 0;
 }
@@ -173,5 +173,12 @@ input[type="text"], input[type="email"] {
 }
 h1 {
 	font-size:42px;
+}
+.img-review {
+    display: block;
+    width: 100% \9;
+    max-width: 100%;
+    height: auto;
+	margin: 0 auto;
 }
 }
