--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,19 @@ body {
 	color: #fff;
 }
 
+body.clicked {
+  background: #7f1d26;
+}
+.smiley {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  width: 1rem;
+  height: 1rem;
+  line-height: 1rem;
+  font-size: 1rem;
+}
+
 .main {
 	max-width: 700px;
 	margin: 0 auto;
