--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@ body {
 
 h1 {
 	font-weight:700;
-	color: #111111;
 	font-size: 2.5em;
+	line-height: 1em;
 }
 
 h2 {
-	font-weight:400;
+	font-weight:700;
 	font-size: 1.5em;
 }
 
@@ -112,7 +112,6 @@ input[type="text"], input[type="email"] {
 
 .cta {
 	border:2px dashed #F90;
-	background-color:#FFC;
 	padding:15px;
 	margin: 2em 0;
 }
@@ -129,6 +128,10 @@ input[type="text"], input[type="email"] {
 }
 
 @media screen and (max-width: 400px) {
+h1 {
+	font-size: 2em;
+	line-height: 1em;
+}
 .who { 
 	float: none;
 	margin-right:0;
@@ -143,15 +146,6 @@ input[type="text"], input[type="email"] {
     height: auto;
 	margin: 0 auto;
 	padding-bottom:20px;
-}
-h1 {
-	font-size:18px;
-}
-h2 {
-	font-size:16px;
-}
-body {
-	font-size:14px;
 }
 .img-review {
     display: block;
